<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--DATA BINDING-->
<!--    <data>-->

<!--        <variable-->
<!--            name="medicineObj"-->
<!--            type="com.codedamon.medshare.model.medicine.Medicine" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".donor.ui.addMedicinePage.AddMedicineFragment">

        <View
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/wave_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_close"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:text="Add Medicine"
            android:textColor="@color/grey_white"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="16sp"

            android:text="@string/medicine_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/med_name_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/tv1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/med_name_et">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/expiry_date_et"
                android:layout_weight="2"
                android:hint="@string/expiry_date"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/calender_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_calendar_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/med_cost_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="2"
                android:hint="@string/price_per_item"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/med_quantity_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_weight="1"

                android:hint="@string/quantity"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_marginHorizontal="20dp"
            android:id="@+id/addMedBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_to_box"
            app:layout_constraintTop_toBottomOf="@id/lin2" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:src="@drawable/med_img"
            android:scaleType="centerCrop"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>